Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

14-Dec-2010 Mark Dexter
+ [#23750] Update of old core layouts in Milky Way (Elin Waring & Jennifer Marriott)
# Reverting [#23697] since it causes problems in Menu Item edit. Re-opening issue.

14-Dec-2010 Ian MacLennan
 # [#23373] Make decision and implement changes to URL structure
 # [#23764] Search Results have issues with SEF (Error: 500)

14-Dec-2010 Jean-Marie Simonet
 # [#23771] RTL header display issue (bluestork) + same in admin
 
14-Dec-2010 Christophe Demko
 # [#23770] unit test are not working on JLanguage since commit on [#23407]
 # [#23749] User with core.admin but not core.manage in com_messages can be selected as recipient of messages (Rouven Weßling)

13-Dec-2010 Ian MacLennan
 # [#22751] errors in javascript form validation and combobox.js

13-Dec-2010 Christophe Demko
 # adding a jimport in uri.php (it uses JString::parse_url)
 # [#23407] Add option which day should be the first day of the week (Dennis Hermatski)
 # [#23748] languagefilter causes double content on www.example.com/ and www.example.com/en/ (Mark Visser)

13-Dec-2010 Jean-Marie Simonet
 $# [#23747] Fix UI for blog layouts. Thanks Elin.
 # Fixing some hardcoded colons
 $ Normalizing some language strings, Correcting typos.

13-Dec-2010 Mark Dexter
# [#23377] Version information disclosure in joomla.xml
# Sample data fixes (Elin Waring)
# Better fix for installation error with [#23745] (Sam Moffatt)

12-Dec-2010 Mark Dexter
# [#23741] Menu -> Content -> Featured Articles gives error 500
^ [#22758] Controlling module parameters for <jdoc:include type="module" /> (Dennis Hermatski)
# [#22531] Private Message recipient not checking for backend access
^ [#23745] Add a system plugin event called onBeforeCompileHead (Louis Landry)