@@ -72,8 +72,8 @@ $templateparams	= $app->getTemplate(true)->params;
 		<script type="text/javascript" src="<?php echo $this->baseurl ?>/templates/beez5/javascript/hide.js"></script>
 
 		<script type="text/javascript">
-			var big ='<?php echo $this->params->get('wrapperLarge');?>%';
-			var small='<?php echo $this->params->get('wrapperSmall'); ?>%';
+			var big ='<?php echo (int)$this->params->get('wrapperLarge');?>%';
+			var small='<?php echo (int)$this->params->get('wrapperSmall'); ?>%';
 			var altopen='<?php echo JText::_('TPL_BEEZ5_ALTOPEN',true); ?>';
 			var altclose='<?php echo JText::_('TPL_BEEZ5_ALTCLOSE',true); ?>';
 			var bildauf='<?php echo $this->baseurl ?>/templates/beez5/images/plus.png';
@@ -104,7 +104,7 @@ $templateparams	= $app->getTemplate(true)->params;
 					<h1 id="logo">
 
 					<?php if ($logo != '-1' ): ?>
-					<img src="<?php echo $this->baseurl ?>/<?php echo $logo; ?>" alt="<?php echo $templateparams->get('sitetitle');?>" />
+					<img src="<?php echo $this->baseurl ?>/<?php echo htmlspecialchars($logo); ?>" alt="<?php echo htmlspecialchars($templateparams->get('sitetitle'));?>" />
 					<?php endif;?>
 					<?php if ($logo == '-1' ): ?>
 					<?php echo $templateparams->get('sitetitle');?>
