@@ -59,26 +59,31 @@
 			<fieldset name="advanced">
 				 <field name="wrapperSmall" type="text" default="53"
 					label="TPL_BEEZ5_FIELD_WRAPPERSMALL_LABEL"
-					description="TPL_BEEZ5_FIELD_WRAPPERSMALL_DESC" />
+					description="TPL_BEEZ5_FIELD_WRAPPERSMALL_DESC"
+					filter="int" />
 
 				<field name="wrapperLarge" type="text" default="72"
 					label="TPL_BEEZ5_FIELD_WRAPPERLARGE_LABEL"
-					description="TPL_BEEZ5_FIELD_WRAPPERLARGE_DESC" />
+					description="TPL_BEEZ5_FIELD_WRAPPERLARGE_DESC"
+					filter="int" />
 				<field name="logo" type="media"
 					hide_default="1"
 					label="TPL_BEEZ5_FIELD_LOGO_LABEL" description="TPL_BEEZ5_FIELD_LOGO_DESC" />
 
 				<field name="sitetitle"  type="text" default=""
 					label="TPL_BEEZ5_FIELD_SITETITLE_LABEL"
-					description="TPL_BEEZ5_FIELD_SITETITLE_DESC" />
+					description="TPL_BEEZ5_FIELD_SITETITLE_DESC"
+					filter="string" />
 
 				<field name="sitedescription"  type="text" default=""
 					label="TPL_BEEZ5_FIELD_DESCRIPTION_LABEL"
-					description="TPL_BEEZ5_FIELD_DESCRIPTION_DESC" />
+					description="TPL_BEEZ5_FIELD_DESCRIPTION_DESC"
+					filter="string" />
 
 				<field name="navposition" type="list" default="center"
 					label="TPL_BEEZ5_FIELD_NAVPOSITION_LABEL"
 					description="TPL_BEEZ5_FIELD_NAVPOSITION_DESC"
+					filter="word"
 				>
 					<option value="center">TPL_BEEZ5_OPTION_AFTER_CONTENT</option>
 					<option value="left">TPL_BEEZ5_OPTION_BEFORE_CONTENT</option>
@@ -87,6 +92,7 @@
 				<field name="html5" type="list" default="0"
 					label="TPL_BEEZ5_FIELD_HTML5_LABEL"
 					description="TPL_BEEZ5_FIELD_HTML5_DESC"
+					filter="int"
 				>
 					<option value="0">TPL_BEEZ5_OPTION_XHTML</option>
 					<option value="1">TPL_BEEZ5_OPTION_HTML5</option>
